--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Trebuchet MS, sans-serif;
+    font-family: Trebuchet MS;
     margin: 0;
     padding: 0;
     background-color: #f9f9f9;
@@ -20,7 +20,7 @@ body {
 }
 
 .filters {
-    font-family: Trebuchet MS, sans-serif;
+    font-family: Trebuchet MS;
     display: flex;
     justify-content: space-between;
     padding: 10px;
@@ -134,6 +134,7 @@ body {
 }
 
 footer{
+    font-family: Trebuchet MS;
     background-color: #ff6600;
     text-align: center;
 }
