--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ body {
     width: 80;
     background-color: #ff6600;
     border-radius: 10px;
+    margin-bottom: 10px;
 }
 
 .filter {
@@ -99,17 +100,19 @@ body {
 }
 
 #teks{
+    font-size:15px;
     width: 100%;
     background-color: #F6F5F1;
-    border-radius: 5px;
+    border-radius: 3px;
     color: black;
     text-align: center;
 }
 
 #tekz{
+    font-size:15px;
     width: 100%;
     background-color: #F6F5F1;
-    border-radius: 5px;
+    border-radius: 3px;
     color: black;
     text-align: center;
 }
