--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
     width: 80;
     background-color: #ff6600;
     border-radius: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 .filter {
@@ -63,7 +63,7 @@ body {
 }
 
 .stat-box {
-    margin: 0 20px;
+    margin: 20px;
     text-align: center;
 }
 
@@ -85,7 +85,7 @@ body {
 }
 
 .statz-box {
-    margin: 0 20px;
+    margin: 20px;
     text-align: center;
 }
 
