--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body {
 
 .filter {
     width: 50%;
-    font-family: Trebuchet MS, sans-serif;
+    font-family: Trebuchet MS;
     display: flex;
     align-items: center;
 }
